	where they contain latin1 characters.
	* Source/Additions/GCDictionary.m: Update map tables for macosx
	* Source/NSMapTable.m: Update for macosx compatibility, add some
	documentation and move stuff from externs.m
	* Source/NSHashTable.m: Update for macosx compatibility, add some
	documentation and move stuff from externs.m
	* Source/externs.m: Remove map and hash table stuff
	* Headers/gnustep/base/NSMapTable.h: Update for macosx compatibility.
	* Headers/gnustep/base/NSHashTable.h: Ditto
	* Tools/AGSHtml.m: Fix typo ... excess semicolon in constant output.
	* Tools/AGSParser.m: Fix error failing to find comment for constants.

2002-12-30  Adam Fedor  <fedor@gnu.org>

	* SSL/GNUmakefile: Don't compile if base=no

	* Tools/AGSIndex.h: Include gnustep/base/GSXML.h.
	* Tools/AGSHtml.m: Include GNUstep.h
	* Tools/AGSInde.m, Tools/AGSOutput.m, Tools/AGSParser.m,
	Tools/HTMLLinker.m: Idem.
	* Tools/GNUmakegile: Only compile autogsdoc when add=yes
	* Tools/Makefile.preamble: Include -lgnustep-baseadd when add=yes

Mon Dec 30 18:19:55 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac: Recognize apple OBJC_RUNTIME_LIB.
	* configure: Regenerated.
	* Makefile.postamble: Updated check for gnu FOUNDATION_LIB.
	* Source/Makefile.preamble (libgnustep-baseadd_LIBRARIES_DEPEND_UPON): 
	Do not add -framework Foundation on Apple, it's added automatically
	by gnustep-make.
	* Source/GNUmakefile: Updated check for OBJC_RUNTIME_LIB.
	* Source/Additions/GNUmakefile: Updated checks for
	OBJC_RUNTIME_LIB and FOUNDATION_LIB.
	
2002-12-28  Kelvin  <kelvin@xbar.org>

	* Source/NSPage.m: Add BeOS support.
	* Source/NSProcessInfo.m ([NSProcessInfo -operatingSystem]): Idem
	(Also added solaris (fedor@gnu.org)).

2002-12-24  Richard Frith-Macdonald <rfm@gnu.org>

	*  Source/Additions/Unicode.m: Tidied and optimised binary searches.

2002-12-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSParser.m: Fix bug handling repeated opeing braces.
